remove unnecessary white space

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amz",
   "displayName": "Aurared",
   "publisher": "amzhnpi",
-  "description": "theme just for fun. feel free to use :)",
+  "description": "My dumb theme just for fun. feel free to use :)",
   "version": "0.1.5",
   "icon": "images/icon.png",
   "engines": {
